samples/_failures_safe/1761523970_08c6f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd8c5335.c: In function ‘main’:
./samples/SAFE/__tmp_fd8c5335.c:126:21: error: expected expression at end of input
  126 |                     long sum = (
      |                     ^~~~
./samples/SAFE/__tmp_fd8c5335.c:126:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd8c5335.c:126:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd8c5335.c:126:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd8c5335.c:126:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd8c5335.c:126:21: error: expected declaration or statement at end of input
